--- a/client/partials/chat.html
+++ b/client/partials/chat.html
@@ -1,6 +1,7 @@
 <div class="row chat">
-  <div class="col-md-6 col-md-offset-3 bg-grey" style="height: 100%;">
+  <div class="col-md-6 col-md-offset-3 bg-grey" style="height: 100%; padding-top:15px;">
     <h4>SECTION : {{ section.course_name }}</h4>
+    <hr>
     <div id="chatBox" schroll-bottom="messages">
       <div ng-repeat="message in messages">
         <div class="chatMessage">
