--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -81,7 +81,7 @@
 	</h4>
       </div>
       <form ng-submit="addTodo()" class="form-inline" style="margin-top:30px; padding-left: 10px; padding-right: 10px;">
-	<input type="text" class="form-control" placeholder="Todo" ng-model="todo_task" size="25"></input>
+	<input type="text" class="form-control" placeholder="Task..." ng-model="todo_task" size="25"></input>
 	<button type="submit" class="btn btn-default btn-md">Add</button>
       </form>
     </div>
