--- a/client/partials/sections.html
+++ b/client/partials/sections.html
@@ -1,6 +1,7 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 bg-grey">
+  <div class="col-md-6 col-md-offset-3 bg-grey" style="padding-top:15px;">
     <h4>SECTION : {{ section.course_id }}{{ section.section_id }} - {{ section.course_name }}</h4>
+    <hr>
     <div class="row">
       <div class="col-md-4">
   	<div style="margin:5px; background-color: #fefefe; width: 100%">
